--- a/package.json
+++ b/package.json
@@ -1,27 +1,41 @@
 {
-  "name": "nextjs-arweave",
-  "version": "0.1.0",
-  "private": true,
+  "name": "sharespace",
+  "version": "0.0.1",
   "scripts": {
     "dev": "next dev",
     "prebuild": "pnpm clean-build && node scripts/add-asset-prefix.mjs",
     "postbuild": "node scripts/remove-asset-prefix.mjs",
     "build": "pnpm prebuild && next build && next export && pnpm postbuild",
+    "build-contracts": "pnpm clean-build && node scripts/build.js",
+    "test": "jest",
     "start": "next start",
     "lint": "next lint",
     "clean": "pnpm clean-build && rm -rf node_modules",
-    "clean-build": "rm -rf out*"
+    "clean-build": "rm -rf out* dist"
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "arweave": "1.12.4",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "warp-contracts": "1.2.52"
+  },
+  "devDependencies": {
+    "@swc/core": "1.3.32",
+    "@types/jest": "29.4.0",
+    "arlocal": "1.1.60",
+    "esbuild": "0.17.6",
+    "jest": "29.4.1",
+    "replace-in-file": "6.3.5",
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1",
+    "tsup": "6.5.0"
   }
 }
