--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "clean-build": "rm -rf out* dist"
   },
   "dependencies": {
+    "@aura-ui/react": "0.0.3-alpha.5",
     "@next/font": "13.1.6",
+    "@radix-ui/react-icons": "1.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "arweave": "1.12.4",
+    "arconnect": "0.4.2",
+    "arweave": "1.11.8",
+    "arweave-account": "1.3.4",
+    "arweave-wallet-connector": "0.0.31",
+    "arweave-wallet-ui": "0.0.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "next": "12.3.0",
+    "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5",
     "warp-contracts": "1.2.52"
   },
   "devDependencies": {
@@ -36,6 +42,7 @@
     "replace-in-file": "6.3.5",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "tsup": "6.5.0"
+    "tsup": "6.5.0",
+    "typescript": "4.7.4"
   }
 }
