--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postbuild": "node scripts/remove-asset-prefix.mjs",
     "build": "pnpm prebuild && next build && next export && pnpm postbuild",
     "build-contracts": "pnpm clean-build && node scripts/build.js",
+    "deploy-contracts": "node tools/deploy-contract.mjs",
     "test": "jest",
     "start": "next start",
     "lint": "next lint",
@@ -21,7 +22,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "arconnect": "0.4.2",
-    "arweave": "1.11.8",
+    "arweave": "1.12.4",
     "arweave-account": "1.3.4",
     "arweave-wallet-connector": "0.0.31",
     "arweave-wallet-ui": "0.0.2",
