--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@aura-ui/react": "0.0.3-alpha.5",
+    "@bundlr-network/client": "0.10.3",
     "@next/font": "13.1.6",
     "@radix-ui/react-icons": "1.1.1",
     "@types/node": "18.11.18",
