fix: arweave-graphql not installed

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "arconnect": "0.4.2",
     "arweave": "1.12.4",
     "arweave-account": "1.3.4",
+    "arweave-graphql": "0.0.5",
     "arweave-wallet-connector": "0.0.31",
     "arweave-wallet-ui": "0.0.2",
     "eslint": "8.33.0",
