--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "@bundlr-network/client": "0.10.3",
     "@next/font": "13.1.6",
     "@radix-ui/react-icons": "1.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
     "arconnect": "0.4.2",
     "arweave": "1.12.4",
     "arweave-account": "1.3.4",
+    "arweave-graphql": "0.0.5",
     "arweave-wallet-connector": "0.0.31",
     "arweave-wallet-ui": "0.0.2",
+    "date-fns": "2.29.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "formik": "2.2.9",
@@ -39,6 +38,9 @@
   "devDependencies": {
     "@swc/core": "1.3.32",
     "@types/jest": "29.4.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
     "arlocal": "1.1.60",
     "esbuild": "0.17.6",
     "jest": "29.4.1",
