--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean-build": "rm -rf out* dist"
   },
   "dependencies": {
-    "@aura-ui/react": "0.0.3-alpha.5",
+    "@aura-ui/react": "0.0.4",
     "@bundlr-network/client": "0.10.3",
     "@next/font": "13.1.6",
     "@radix-ui/react-icons": "1.1.1",
